--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <!-- Shoes Section  -->
         <section class="mb-5">
             <div class="container">
-                <h1>Shoes</h1>
+                <h1 class="text-warning">Shoes</h1>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                       <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
@@ -236,11 +236,11 @@
         <!-- Bike Section  -->
         <section>
             <div class="container">
-                <h1>Shoes</h1>
+                <h1 class="text-warning">Bike</h1>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                       <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
-                        <img src="img/bike/bike-1.png" width="729" class="card-img-top" alt="...">
+                        <img src="img/bike/bike -1.png"  class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="col">
                       <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
-                        <img src="img/bike/bike-2.png" width="729" class="card-img-top" alt="...">
+                        <img src="img/bike/bike-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="col">
                       <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded">
-                        <img src="img/bike/bike-3.png" width="729" class="card-img-top" alt="...">
+                        <img src="img/bike/bike-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -277,6 +277,37 @@
                   </div>
             </div>
         </section>
+
+        <!-- sign in section  -->
+        <section class="mt-5">
+           <div class="container">
+               <div class="row d-flex justify-content-center">
+                   <div class="col-6 shadow-lg p-3 mb-5 bg-body rounded">
+                    <form>
+                        <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+                        <div class="mb-3">
+                          <label for="exampleInputPassword1" class="form-label">Password</label>
+                          <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-warning">Sign in</button>
+                      </form>
+                   </div>
+               </div>
+           </div>
+        </section>
+
+        <!-- footer  -->
+        <footer class="text-center">
+            <small> Copyright - 2021  All rights reserved - Abh Ratul</small>
+        </footer>
 
     </main>
 
